# P00RIJA-CRYPTOGRAPHY

./: .dockerignore  NATIVE_BUILD.md  README.md  index.html  monitor-client.html  package-lock.json  package.json
config/: Dockerfile  Dockerfile.chat-signal  docker-compose.yaml  jest.config.cjs  nginx.conf
css/: monitor-client.css  styles.css
data/chat-signal/: server-config.json
js/: monitor-client.js  relay-hints.js
scripts/: native-build-wizard.sh  prepare-monitor-tauri.js  prepare-tauri-web.js  server.js  setup-linux.sh  setup-macos.sh  setup-server-linux.sh  setup-windows.ps1  setup.sh
scripts/lib/: setup-common.sh
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  tauri.monitor.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
standalone-relay/: Dockerfile.relay  docker-compose.yaml  package.json  server.js  setup.sh
