[package]
name = "p00rija-cryptography"
version = "2.99.0"
description = "P00RIJA Cryptography native desktop shell"
authors = ["P00RIJA"]
license = "GPL-3.0-only"
repository = "https://github.com/Poorija/P00RIJA-Cryptography"
edition = "2021"
rust-version = "1.88"

[lib]
name = "p00rija_cryptography_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.1", features = [] }

[dependencies]
getrandom = "0.3"
keyring = "4.0.1"
keyring-core = "1.0.0"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.11.1", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-notification = "2.3.3"
thiserror = "2"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-local-authentication = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
robius-authentication = "0.1.1"
